--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
         "dev": "nodemon server.js"
     },
     "dependencies": {
+        "@vercel/blob": "^2.0.0",
         "better-sqlite3": "^12.5.0",
         "cors": "^2.8.5",
+        "dotenv": "^17.2.3",
         "express": "^4.18.2",
         "uuid": "^9.0.0"
     },
