social login (google)

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 PORT=5000
 
+# Database provider: 'local' or 'turso'
+DB_PROVIDER=local
+
 # Vercel Blob Storage token
 # Create a Blob store at https://vercel.com/dashboard/storage
 BLOB_READ_WRITE_TOKEN=vercel_blob_rw_xxxxx
@@ -8,3 +11,12 @@ BLOB_READ_WRITE_TOKEN=vercel_blob_rw_xxxxx
 # Create a database at https://turso.tech/
 TURSO_DATABASE_URL=libsql://your-database.turso.io
 TURSO_AUTH_TOKEN=your-auth-token-eyJ...
+
+# Google OAuth 2.0
+# Create credentials at https://console.cloud.google.com/apis/credentials
+GOOGLE_CLIENT_ID=your-client-id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your-client-secret
+GOOGLE_REDIRECT_URI=http://localhost:5000/api/auth/google/callback
+
+# Frontend URL (for OAuth redirect after login)
+FRONTEND_URL=http://localhost:5173
